test-suite/tests/roundtrip/invalid/semantic/typecheck/partition/06/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/06/input.essence:5:45:
  |
5 |     (partition() : `partition from bool`) = partition({true}) - partition({false})
  |                                             ^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/roundtrip/invalid/semantic/typecheck/partition/06/input.essence:5:65:
  |
5 |     (partition() : `partition from bool`) = partition({true}) - partition({false})
  |                                                                 ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

